# text2sql-ReAct

./: LICENSE  README.md  __init__.py  agent.py  analyze.py  ap_dropout_frontend.html  app.js  app.py  cli.py  connection.py  core.py  demo_dropout_prediction.py  demo_with_dummy_db.py  dialects.py  dropout_prediction.db  dropout_scenarios.md  examples.py  generate.py  index.html  models.py  pyproject.toml  scenarios.md  setup_dropout_db.py  spider_80_table_run.md  techstack.md  test_core.py  tools.py  tracing.py  walkthrough.md
